# roadmap-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  plan.md  pyproject.toml
docs/: excel_format.md  simulation_details.md  variable_capacity.md
examples/: one_item.xlsx  quarterly_roadmap.xlsx  two_items_with_start_date.xlsx  variable_capacity.xlsx  with_dependency.xlsx  without_dependencies.xlsx
src/roadmap_analyzer/: capacity.py  capacity_chart.py  capacity_loader.py  components.py  config.py  config_loader.py  data_loader.py  gantt_chart.py  loader_utils.py  main.py  models.py  probability_chart.py  simulation.py  statistics.py  utils.py  visualization.py
tests/: test_capacity.py  test_capacity_loader.py  test_case_insensitive_loading.py  test_simulation.py  test_start_date_on_item.py  test_utils.py  test_variable_capacity.py
