[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roadmap_analyzer"
version = "0.1.0"
description = "Roadmap Monte Carlo Analysis"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.292",
    "pytest>=7.4.0",
    "watchdog>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
